--- a/EdgeLedger/index.html
+++ b/EdgeLedger/index.html
@@ -5,16 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to EdgeLedger</title>
+    <link rel="stylesheet" href="./css/utilities.css">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
 </head>
-<body>
+<body id="home">
     <header class="hero">
-        <div id="navbar">
-            <h1 class="logo"><span><i class="fas fa-book-open"></i>Edge</span>Ledger</h1>
+        <div id="navbar" class="navbar">
+            <h1 class="logo">
+                <span class="text-primary"><i class="fas fa-book-open"></i> Edge</span>Ledger
+            </h1>
             <nav>
                 <ul>
-                    <li><a href="">Home</a></li>
+                    <li><a href="#home">Home</a></li>
                     <li><a href="">About</a></li>
                     <li><a href="">Cases</a></li>
                     <li><a href="">Blog</a></li>
@@ -23,10 +26,53 @@
             </nav>
         </div>
         <div class="content">
-            <h1>The Sky Is the Limit</h1>
+            <h1>The Sky Is The Limit</h1>
             <p>We provide world class financial assistance</p>
-            <a href="">>Read More</a>
+            <a class="btn btn-primary" href=""><i class="fas fa-chevron-right"></i> Read More</a>
         </div>
     </header>
+    <main>
+        <section id="about" class="icons bg-light">
+            <div class="flex-items">
+                <div>
+                    <i class="fas fa-university fa-2x"></i>
+                    <div>
+                        <h3>Investment Banking</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, ipsa?</p>
+                    </div>
+                    
+                </div>
+                <div>
+                    <i class="fas fa-book-reader fa-2x"></i>
+                    <div>
+                        <h3>Portfolio Manager</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, ipsa?</p>
+                    </div>
+                </div>
+                <div>
+                    <i class="fas fa-pencil-alt fa-2x"></i>
+                    <div>
+                        <h3>Tax & Custodial</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, ipsa?</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="solutions flex-columns">
+            <div class="row">
+                <div class="column">
+                    <div class="column-1"><img src="./images/home/people.jpg" alt=""></div>  
+                </div>
+                <div class="column">
+                    <div class="column-2 bg-primary">
+                        <h4>What are you looking for</h4>
+                        <h2>We provide bespoke solutions</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam cum tempore a. Aut iure, saepe nostrum culpa a sit delectus?</p>
+                        <a class="btn btn-primary" href="">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
