--- a/EdgeLedger/index.html
+++ b/EdgeLedger/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,11 @@
     <title>Welcome to EdgeLedger</title>
     <link rel="stylesheet" href="./css/utilities.css">
     <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" />
 </head>
+
 <body id="home">
     <header class="hero">
         <div id="navbar" class="navbar">
@@ -22,7 +26,7 @@
                     <li><a href="">Cases</a></li>
                     <li><a href="">Blog</a></li>
                     <li><a href="">Contact</a></li>
-                </ul>  
+                </ul>
             </nav>
         </div>
         <div class="content">
@@ -40,7 +44,7 @@
                         <h3>Investment Banking</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, ipsa?</p>
                     </div>
-                    
+
                 </div>
                 <div>
                     <i class="fas fa-book-reader fa-2x"></i>
@@ -61,18 +65,142 @@
         <section class="solutions flex-columns">
             <div class="row">
                 <div class="column">
-                    <div class="column-1"><img src="./images/home/people.jpg" alt=""></div>  
+                    <div class="column-1"><img src="./images/home/people.jpg" alt=""></div>
                 </div>
                 <div class="column">
                     <div class="column-2 bg-primary">
                         <h4>What are you looking for</h4>
                         <h2>We provide bespoke solutions</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam cum tempore a. Aut iure, saepe nostrum culpa a sit delectus?</p>
-                        <a class="btn btn-primary" href="">Read More</a>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam cum tempore a. Aut iure,
+                            saepe nostrum culpa a sit delectus?</p>
+                        <a class="btn btn-primary btn-outline" href="">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="cases" class="cases flex-grid section-padding">
+            <header class="section-header">
+                <h4>This is what we do</h4>
+                <h2>Business Cases</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, sed.</p>
+            </header>
+            <div class="row">
+                <div class="column">
+                    <a>
+                        <img src="./images/cases/cases1.jpg" alt="">
+                    </a>
+                    <a>
+                        <img src="./images/cases/cases2.jpg" alt="">
+                    </a>
+                </div>
+                <div class="column">
+                    <a>
+                        <img src="./images/cases/cases3.jpg" alt="">
+                    </a>
+                    <a>
+                        <img src="./images/cases/cases4.jpg" alt="">
+                    </a>
+                </div>
+                <div class="column">
+                    <a>
+                        <img src="./images/cases/cases5.jpg" alt="">
+                    </a>
+                    <a href="">
+                        <img src="./images/cases/cases6.jpg" alt="">
+                    </a>
+                </div>
+                <div class="column">
+                    <a>
+                        <img src="./images/cases/cases7.jpg" alt="">
+                    </a>
+                    <a>
+                        <img src="./images/cases/cases8.jpg" alt="">
+                    </a>
+                </div>
+            </div>
+        </section>
+        <section class="blog flex-columns">
+            <div class="row">
+                <div class="column">
+                    <div class="column-2 bg-secondary">
+                        <p>Apirl 16 2020</p>
+                        <h2>Blog Post One</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, explicabo excepturi ex
+                            facilis
+                            recusandae totam inventore eos aut laboriosam placeat?</p>
+                        <a href="" class="btn btn-secondary btn-outline">Read Our Blog</a>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="column-1">
+                        <img src="./images/home/blog.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="team section-padding">
+            <header class="section-header">
+                <h4>Who we are</h4>
+                <h2>Our Professional Team</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, sed.</p>
+            </header>
+            <div class="flex-items">
+                <div>
+                    <img src="./images/team/person1.jpg" alt="">
+                    <p>John Doe</p>
+                    <p>President</p>
+                </div>
+                <div>
+                    <img src="./images/team/person2.jpg" alt="">
+                    <p>Jane Doe</p>
+                    <p>Vice President</p>
+                </div>
+                <div>
+                    <img src="./images/team/person3.jpg" alt="">
+                    <p>Steve Smith</p>
+                    <p>Marketing Head</p>
+                </div>
+            </div>
+        </section>
+        <section class="contact flex-columns">
+            <div class="row">
+                <div class="column">
+                    <div class="column-1">
+                        <img src="./images/home/contact.jpg" alt="">
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="column-2 bg-light">
+                        <h2>Request Callback</h2>
+                        <form class="callback-form">
+                            <div class="form-controll">
+                                <label for="name"></label>
+                                <input type="text" name="name" id="name" placeholder="Enter name">
+                            </div>
+                            <div class="form-controll">
+                                <label for="email"></label>
+                                <input type="text" name="email" id="email" placeholder="Enter email">
+                            </div>
+                            <div class="form-controll">
+                                <label for="tel"></label>
+                                <input type="text" name="tel" id="tel" placeholder="Enter tel">
+                            </div>
+                            <input type="submit" value="Send" class="btn btn-primary">
+                        </form>
                     </div>
                 </div>
             </div>
         </section>
     </main>
+    <footer class="footer bg-dark">
+        <div class="social">
+            <i class="fab fa-facebook fa-2x"></i>
+            <i class="fab fa-twitter fa-2x"></i>
+            <i class="fab fa-youtube fa-2x"></i>
+            <i class="fab fa-linkedin fa-2x"></i>
+        </div>
+            <p>Copyright &copy; 2020 - EdgeLedger</p>
+    </footer>
 </body>
+
 </html>
