--- a/EdgeLedger/index.html
+++ b/EdgeLedger/index.html
@@ -6,26 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to EdgeLedger</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="./css/utilities.css">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" />
+    <link rel="stylesheet" href="css/lightbox.min.css">;    
 </head>
 
 <body id="home">
     <header class="hero">
-        <div id="navbar" class="navbar">
+        <div id="navbar" class="navbar top">
             <h1 class="logo">
                 <span class="text-primary"><i class="fas fa-book-open"></i> Edge</span>Ledger
             </h1>
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Cases</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#cases">Cases</a></li>
+                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -86,34 +88,34 @@
             </header>
             <div class="row">
                 <div class="column">
-                    <a>
+                    <a href="./images/cases/cases1.jpg" data-lightbox="cases">
                         <img src="./images/cases/cases1.jpg" alt="">
                     </a>
-                    <a>
+                    <a href="./images/cases/cases2.jpg" data-lightbox="cases">
                         <img src="./images/cases/cases2.jpg" alt="">
                     </a>
                 </div>
                 <div class="column">
-                    <a>
+                    <a href="./images/cases/cases3.jpg" data-lightbox="cases">
                         <img src="./images/cases/cases3.jpg" alt="">
                     </a>
-                    <a>
+                    <a href="./images/cases/cases4.jpg" data-lightbox="cases">
                         <img src="./images/cases/cases4.jpg" alt="">
                     </a>
                 </div>
                 <div class="column">
-                    <a>
-                        <img src="./images/cases/cases5.jpg" alt="">
+                    <a href="./images/cases/cases5.jpg" data-lightbox="cases">
+                        <img src="./images/cases/cases5.jpg" alt="" >
                     </a>
-                    <a href="">
+                    <a href="./images/cases/cases6.jpg" data-lightbox="cases">
                         <img src="./images/cases/cases6.jpg" alt="">
                     </a>
                 </div>
                 <div class="column">
-                    <a>
-                        <img src="./images/cases/cases7.jpg" alt="">
+                    <a href="./images/cases/cases7.jpg" data-lightbox="cases">
+                        <img src="./images/cases/cases7.jpg" alt="" >
                     </a>
-                    <a>
+                    <a href="./images/cases/cases8.jpg" data-lightbox="cases">
                         <img src="./images/cases/cases8.jpg" alt="">
                     </a>
                 </div>
@@ -201,6 +203,27 @@
         </div>
             <p>Copyright &copy; 2020 - EdgeLedger</p>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="./js/lightbox.min.js"></script>
+    <script>
+        const navbar = document.getElementById("navbar");
+        let scrolled = false;
+
+        window.onscroll = function() {
+            if (window.pageYOffset > 100) {
+                navbar.classList.remove('top');
+                if (!scrolled) {
+                    navbar.style.transform = "translateY(-70px)";
+                }
+                setTimeout(() => {
+                    navbar.style.transform = "translateY(0)";
+                    scrolled = true;
+                }, 200)
+            } else {
+                navbar.classList.add('top');
+            }
+        }
+    </script>
 </body>
 
 </html>
