--- a/newsgrid/index.html
+++ b/newsgrid/index.html
@@ -12,8 +12,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" media="screen and (max-width: 768px)" href="./css/mobile.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Staatliches&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Staatliches&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 
@@ -44,12 +43,70 @@
                         fuga
                         aliquam placeat quis repellendus quia autem!</p>
                     <div>
-                        <a href="" class="btn">Read More</a>
+                        <a href="" class="btn btn-primary">Read More</a>
                     </div>
                 </div>
             </div>
         </div>
     </header>
+    <section id="home-articles" class="py-2">
+        <div class="container">
+            <h2>Editor Picks</h2>
+            <div class="articles-container">
+                <article class="card">
+                    <img src="./images/articles/ent1.jpg" alt="">
+                    <div>
+                        <p class="category category-entertainment">ENTERTAINMENT</p>
+                        <h3><a href="">Lorem ipsum dolor sit amet.</a></h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi, mollitia accusantium velit
+                            ipsum voluptatibus qui!</p>
+                    </div>
+                </article>
+                <article class="card bg-dark">
+                    <p class="category category-sports">SPORTS</p>
+                    <h3><a href="">Lorem ipsum dolor sit amet.</a></h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi, mollitia accusantium velit ipsum
+                        voluptatibus qui!</p>
+                </article>
+                <article class="card">
+                    <img src="./images/articles/tech1.jpg" alt="">
+                    <p class="category category-tech">TECHNOLOGY</p>
+                    <h3><a href="">Lorem ipsum dolor sit amet.</a></h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi, mollitia accusantium velit
+                        ipsum voluptatibus qui!</p>
+                </article>
+                <article class="card">
+                    <p class="category category-sports">TECHNOLOGY</p>
+                    <h3><a href="">Lorem ipsum dolor sit amet.</a></h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi, mollitia accusantium velit
+                        ipsum voluptatibus qui!</p>
+                    <img src="./images/articles/sports1.jpg" alt="">
+                </article>
+                <article class="card">
+                    <img src="./images/articles/tech2.jpg" alt="">
+                    <p class="category category-tech">TECHNOLOGY</p>
+                    <h3><a href="">Lorem ipsum dolor sit amet.</a></h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi, mollitia accusantium velit
+                        ipsum voluptatibus qui!</p>
+                </article>
+                <article class="card bg-primary">
+                    <p class="category category-sports">SPORTS</p>
+                    <h3><a href="">Lorem ipsum dolor sit amet.</a></h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi, mollitia accusantium velit ipsum
+                        voluptatibus qui!</p>
+                </article>
+                <article class="card">
+                    <div>
+                        <p class="category category-entertainment">ENTERTAINMENT</p>
+                        <h3><a href="">Lorem ipsum dolor sit amet.</a></h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi, mollitia accusantium velit
+                            ipsum voluptatibus qui!</p>
+                    </div>
+                    <img src="./images/articles/ent2.jpg" alt="">
+                </article>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
