--- a/newsgrid/index.html
+++ b/newsgrid/index.html
@@ -28,7 +28,7 @@
             </div>
             <ul>
                 <li><a href="" class="current">Home</a></li>
-                <li><a href="">About</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
         </div>
     </nav>
@@ -108,5 +108,39 @@
         </div>
     </section>
 </body>
+<footer id="main-footer" class="py-2">
+    <div class="container footer-container">
+        <div>
+            <img src="./images/logo_light.png" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt sequi cum expedita illo sed quia animi mollitia eum dolor cumque?</p>
+        </div>
+        <div>
+            <h3>EMAIL NEWSLETTER</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, aperiam.</p>
+            <form>
+                <label for="email"></label>
+                <input type="email" name="email" placeholder="Enter Email...">
+                <input type="submit" value="Subscribe" class="btn btn-primary">
+            </form>
+        </div>
+        <div>
+            <h3>SITE LINKS</h3>
+            <ul class="list">
+                <li><a href="">Help & Support</a></li>
+                <li><a href="">Privacy Policy</a></li>
+                <li><a href="">About Us</a></li>
+                <li<a href="">Contact</a></li>
+            </ul>
+        </div>
+        <div>
+            <h3>JOIN OUR CLUB</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique, excepturi.</p>
+            <a href="" class="btn btn-secondary">Join Now</a>
+        </div>
+        <div>
+            Copyright © 2019, All Rights Reserved
+        </div>
+    </div>
+</footer>
 
 </html>
