--- a/newsgrid/article.html
+++ b/newsgrid/article.html
@@ -28,36 +28,56 @@
             </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="" class="current">About</a></li>
+                <li><a href="">About</a></li>
             </ul>
         </div>
     </nav>
-    <section id="about" class="py-2">
+    <section id="article" class="py-2">
         <div class="container">
             <div class="page-container">
                 <article class="card">
+                    <img src="./images/articles/ent1.jpg" alt="">
                     <h1 class="l-heading">ABOUT OUR ORGANIZATION</h1>
+                    <div class="meta"><small><i class="fas fa-user"></i> Written by John Doe January 12,2019</small>
+                        <div class="category category-entertainment">ENTERTAINMENT</div>
+                    </div>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore debitis beatae ad doloremque
-                        voluptate, blanditiis suscipit error quam fugit sapiente, aliquid quia libero incidunt recusandae
-                        enim voluptas nulla sequi similique? Temporibus ad est minima magni molestias obcaecati consequatur
+                        voluptate, blanditiis suscipit error quam fugit sapiente, aliquid quia libero incidunt
+                        recusandae
+                        enim voluptas nulla sequi similique? Temporibus ad est minima magni molestias obcaecati
+                        consequatur
                         cumque exercitationem deleniti eos, animi facere recusandae, pariatur eveniet neque? Voluptatem,
                         molestias.
-    
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae dignissimos dolorum ipsam corporis
+
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae dignissimos dolorum ipsam
+                        corporis
                         similique! Quis, esse minus? Ducimus tempore provident sunt officia? Velit temporibus harum
                         voluptate, ipsum quisquam rerum doloremque consectetur quos incidunt deleniti dicta excepturi
                         ratione, fugiat ad fuga in nam dolorum aut minus esse voluptatum suscipit et quae. Repellendus
-                        minus, ratione aperiam commodi voluptas iusto aliquam sapiente. Aut obcaecati, corporis praesentium
+                        minus, ratione aperiam commodi voluptas iusto aliquam sapiente. Aut obcaecati, corporis
+                        praesentium
                         porro nostrum excepturi animi repellendus incidunt non quis nisi assumenda voluptas possimus
-                        molestiae laboriosam iure sed architecto in perferendis magnam blanditiis voluptatum placeat labore
+                        molestiae laboriosam iure sed architecto in perferendis magnam blanditiis voluptatum placeat
+                        labore
                         odio? Unde id dolore aliquam, quas sit harum, saepe maiores facilis aliquid molestiae qui.
-                        Praesentium rerum, minima fugit laudantium quaerat voluptatem pariatur sequi saepe blanditiis nobis
+                        Praesentium rerum, minima fugit laudantium quaerat voluptatem pariatur sequi saepe blanditiis
+                        nobis
                         natus possimus quo, assumenda numquam sit, eaque accusamus incidunt exercitationem quis deleniti
                         quisquam corrupti vel? Ut quisquam consequatur, doloribus voluptatibus iusto quaerat, sint non
                         magnam reiciendis amet quos sapiente excepturi omnis laboriosam nobis, expedita delectus odio
                         provident?</p>
                 </article>
-                <aside class="card bg-primary">
+                <aside id="categories" class="card">
+                    <h2>CATEGORIES</h2>
+                    <ul class="list">
+                        <li><i class="fas fa-chevron-right"></i> <a href="">Sports</a></li>
+                        <li><i class="fas fa-chevron-right"></i> <a href="">Enterrainment</a></li>
+                        <li><i class="fas fa-chevron-right"></i> <a href="">Technology</a></li>
+                        <li><i class="fas fa-chevron-right"></i> <a href="">Fashion</a></li>
+                        <li><i class="fas fa-chevron-right"></i> <a href="">Shopping</a></li>
+                    </ul>
+                </aside>
+                <aside class="card bg-secondary">
                     <h2>JOIN OUR CLUB</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, in.</p>
                     <a href="" class="btn btn-block">Join Now</a>
