--- a/newsgrid/index.html
+++ b/newsgrid/index.html
@@ -129,7 +129,7 @@
                 <li><a href="">Help & Support</a></li>
                 <li><a href="">Privacy Policy</a></li>
                 <li><a href="">About Us</a></li>
-                <li<a href="">Contact</a></li>
+                <li><a href="">Contact</a></li>
             </ul>
         </div>
         <div>
