--- a/newsgrid/index.html
+++ b/newsgrid/index.html
@@ -38,10 +38,7 @@
                 <div class="showcase-content">
                     <p class="category category-sports">SPORTS</p>
                     <h1>SOME SPORTS ARTICLE</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum, alias eius labore quam ex magnam
-                        quaerat, sunt commodi incidunt quia animi impedit beatae quasi? Maiores, cumque animi possimus
-                        fuga
-                        aliquam placeat quis repellendus quia autem!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed harum facere eaque aliquam, quidem aperiam veritatis aut a magni architecto nulla inventore rem. Fugiat hic laudantium pariatur debitis eos quos?</p>
                     <div>
                         <a href="" class="btn btn-primary">Read More</a>
                     </div>
@@ -76,7 +73,7 @@
                         ipsum voluptatibus qui!</p>
                 </article>
                 <article class="card">
-                    <p class="category category-sports">TECHNOLOGY</p>
+                    <p class="category category-sports">SPORTS</p>
                     <h3><a href="">Lorem ipsum dolor sit amet.</a></h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi, mollitia accusantium velit
                         ipsum voluptatibus qui!</p>
